Closed Bug 447945 Opened 17 years ago Closed 17 years ago

IME candidate list is positioned to wrong place when the caret is in <panel>

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla1.9.1

People

(Reporter: masayuki, Assigned: masayuki)

References

(Depends on 1 open bug)

Details

(Keywords: inputmethod, intl, jp-critical, Whiteboard: [needs test])

Attachments

(1 file)

spinning off from bug 433340. On Linux, the candidate list window of IME is positioned to wrong place. On GTK2, Gecko returns the caret position that is the rendering view relative coordinates. In <panel>, the rendering view is for the <panel> element. However, the IME events are dispatched by the parent window. Therefore, we fail to convert the caret position.
Flags: wanted1.9.1?
Flags: wanted1.9.0.x?
Attached patch Patch v2.0Splinter Review
This is simplest approach. IME events and text event should return the widget that is the base of the caret position. Then, widget can recompute the caret position from the actual focused widget to IME context owner widget.
Attachment #331403 - Flags: superreview?(roc)
Attachment #331403 - Flags: review?(roc)
Attachment #331403 - Flags: review?(masaki.katakai)
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 Canceling the review. Because I have a report for this patch in bugzilla-jp. I need to check the reported issue.
Attachment #331403 - Flags: superreview?(roc)
Attachment #331403 - Flags: review?(roc)
Attachment #331403 - Flags: review?(masaki.katakai)
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 sorry for the spam. this patch doesn't have problem, re-requesting the reviews.
Attachment #331403 - Flags: superreview?(roc)
Attachment #331403 - Flags: review?(roc)
Attachment #331403 - Flags: review?(masaki.katakai)
Attachment #331403 - Flags: superreview?(roc)
Attachment #331403 - Flags: superreview+
Attachment #331403 - Flags: review?(roc)
Attachment #331403 - Flags: review+
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 looks OK for me.
Attachment #331403 - Flags: review?(masaki.katakai) → review+
pushed to trunk. if we don't have any regression reports, I'll request a1.9.0.x.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 I don't have any regression reports of this patch. Let's take this patch to 1.9.0 branch. This bug is very unusable for IME users of Linux.
Attachment #331403 - Flags: approval1.9.0.2?
Can we get a test for this bug? I know cocoa widgets can't, but hopefully GTK can be tested...
Flags: wanted1.9.0.x?
Flags: wanted1.9.0.x+
Flags: in-testsuite?
Whiteboard: [needs test?]
(In reply to comment #7) > Can we get a test for this bug? I know cocoa widgets can't, but hopefully GTK > can be tested... I have no idea. However, this behavior is only in Gecko, so, we can make pseudo testing without IME, maybe.
Whiteboard: [needs test?] → [needs test]
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 Moving this out to 1.9.0.3. We really need a test here...
Attachment #331403 - Flags: approval1.9.0.2? → approval1.9.0.3?
Samuel: I'm still thinking the way for creating the automated test. However, maybe, we need to create new APIs like key hell tests...
Masayuki: If you need new APIs, please file bugs on those and CC me. Thanks. :)
Masayuki: Any update here?
(In reply to comment #12) > Masayuki: Any update here? I'm still think for the way to test. But I'll file the bug soon.
Samuel: I filed a meta bug for IME automated tests, it's bug 460056. But I don't have actual idea for implement this testing...
Attachment #331403 - Flags: approval1.9.0.4? → approval1.9.0.4-
Comment on attachment 331403 [details] [diff] [review] Patch v2.0 This sounds cosmetic rather than functional, and not even any screenshots for QA to verify against. Not approving for the 1.9.0 branch, this doesn't appear to meet the branch criteria and 3.1 is coming soon.
Flags: wanted1.9.0.x+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: