Bug 447945 IME candidate list is positioned to wrong place when the caret is in <panel> r=roc+katakai, sr=roc